# hello-world

./: CMakeLists.txt  README.md  main.c  sonar-project.properties
.github/workflows/: build.yml
